--- a/balehu.topmonks.com/src/stylesheets/main.scss
+++ b/balehu.topmonks.com/src/stylesheets/main.scss
@@ -166,36 +166,6 @@ section {
   }
 }
 
-// Header //
-
-header {
-  background: linear-gradient(132.11deg, rgba(44, 77, 255, 0.5) 19.23%, rgba(196, 124, 217, 0.5) 94.63%);
-  background-image: url("../images/bgnd_header.png");
-  background-size: cover;
-  color: #FFFFFF;
-
-  .menu_list a,
-  .logo {
-    color: #FFFFFF;
-  }
-
-  @media screen and (min-width: 1020px) {
-    h1 {
-      margin: 2.5em 0 4em;
-      line-height: 1.4;
-    }
-  }
-
-  .logo {
-    align-self: center;
-    font-size: 24px;
-    font-weight: 900;
-
-    &:hover {
-      color: #32305D;
-    }
-  }
-}
 
 // Menu //
 
@@ -213,9 +183,6 @@ nav {
   }
 }
 
-a {
-  text-decoration: none;
-}
 
 // Section - Create & scale your digital economy //
 
@@ -328,7 +295,7 @@ a {
 // Footer //
 footer {
   li a {
-    color: #000000;
+    color: black;
 
     &:hover {
       color: #C36DE6;
