Blockchain - link &:hover

--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -350,6 +350,9 @@ a.button:hover {
     a {
       font-size: 14px;
       color: var(--tm-purple-light);
+      &:hover {
+        font-weight: bold;
+      }
     }
 
     span.published-date {
