--- a/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
@@ -1,7 +1,7 @@
 .cooperation {
   background: none;
 
-  .box {
+  .cooperation_logo {
     margin: 0;
     padding: 0;
     @media (min-width: 480px) {
