--- a/www.topmonks.cz/src/stylesheets/hp/advicing.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/advicing.scss
@@ -25,6 +25,9 @@
         background-color: var(--tm-primary-light);
         box-shadow: none;
       }
+      @media (max-width: 580px) {
+          padding: 18px;
+      }
     }
   }
 }
