--- a/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
@@ -7,7 +7,7 @@
     @media (min-width: 480px) {
       display: flex;
       align-items: center;
-      justify-content: space-evenly;
+      justify-content: space-between;
       flex-flow: wrap;
     }
     a {
