--- a/www.topmonks.cz/src/stylesheets/typography.scss
+++ b/www.topmonks.cz/src/stylesheets/typography.scss
@@ -57,8 +57,8 @@ body {
 
 h1,
 h2 {
-  font-size: 1.75em; //28px
-  line-height: 1.214em; //34px
+  font-size: 28px;
+  line-height: 34px;
   text-align: center;
   color: var(--tm-black-title);
   margin-bottom: 18px;
@@ -67,7 +67,7 @@ h2 {
 
 h3 {
   font-size: 1.5em; //24px
-  line-height: 1.167em; //28px
+  line-height: 28px;
   text-align: center;
   color: var(--tm-black-title);
   font-weight: 900;
