--- a/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/cooperation.scss
@@ -1,13 +1,13 @@
 .cooperation {
   background: none;
 
-  .cooperation_logo {
+  .box {
     margin: 0;
     padding: 0;
     @media (min-width: 480px) {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-evenly;
       flex-flow: wrap;
     }
     a {
