--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -330,6 +330,10 @@ a.button:hover {
     box-shadow: 0px 2px 23px rgba(0, 0, 0, 0.1);
     padding: 14px 24px;
 
+    &:last-child p {
+      padding-bottom: 8px;
+    }
+
     h3 {
       font-weight: normal;
       text-align: left;
@@ -344,12 +348,13 @@ a.button:hover {
     }
 
     p.perex {
-      min-height: 120px;
+      min-height: 128px;
     }
 
     a {
       font-size: 14px;
       color: var(--tm-purple-light);
+
       &:hover {
         font-weight: bold;
       }
