--- a/www.topmonks.cz/src/stylesheets/v2.scss
+++ b/www.topmonks.cz/src/stylesheets/v2.scss
@@ -73,8 +73,8 @@ h3 {
 .action-button {
   background-color: var(--tm-primary-light);
   color: #A2710E;
-  width: -webkit-fill-available;
-  padding: 12px 0px;
+  width: initial;
+  padding: 12px;
   margin: 16px 0 18px;
   border-radius: 4px;
   box-shadow: none;
