SubPage - IT v Ecommerce

--- a/www.topmonks.cz/src/stylesheets/sub-pages/contact-us.scss
+++ b/www.topmonks.cz/src/stylesheets/sub-pages/contact-us.scss
@@ -12,6 +12,14 @@
     color: #F0BE59;
   }
 
+  .page_sub-title {
+    max-width: 763px;
+    margin: 0 auto;
+    p {
+      line-height: 35px;
+    }
+  }
+
   .box-member {
     padding: 10px 28px;
   }
