--- a/www.topmonks.cz/src/stylesheets/sub-pages/main.scss
+++ b/www.topmonks.cz/src/stylesheets/sub-pages/main.scss
@@ -1,24 +1,3 @@
-@media not all, screen and (min-resolution: 192dpi) and (min-width: 480px), screen and (min-resolution: 2dppx) and (min-width: 480px) {
-  body {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(50% - 430px) top;
-    background-size: 919px auto;
-    overflow-x: hidden;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  body {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/v1565353972/TM%20Subpages/subpages_bgnd.png") no-repeat right calc(50% - 430px) top -16px;
-    background-size: 919px auto;
-    overflow-x: hidden;
-  }
-}
-
-
-h2 {
-  text-align: left;
-}
-
 h3.purple {
   color: var(--tm-secondary);
 }
@@ -31,6 +10,9 @@ ul li {
 }
 
 .jumbotron {
+  h2 {
+    text-align: left;
+  }
   svg {
     width: 100%;
     padding-top: 24px; //1.5em;
@@ -55,6 +37,36 @@ ul li {
     color: var(--tm-black-title);
   }
 }
+
+// SECTION NETWORKING //
+.networking {
+  li {
+    display: -webkit-inline-flex;
+
+    &:before {
+      display: block;
+      content: url("/images/pre-list_subpages-icon.svg");
+      width: 16px;
+      padding: 2px 12px 0;
+    }
+  }
+}
+
+// SECTION EXAMPLES //
+.examples {
+  h2 {
+    text-align: left;
+  }
+  h3 {
+    font-size: 20px;
+    line-height: 29px;
+  }
+
+  .box p {
+    min-height: 100px;
+  }
+}
+
 
 
 @media screen and (min-width: 840px) {
